--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sparkle-Cleaning</title>
-    <meta http-equiv="default-style" content="0; url=/Sparkle-Cleaning">
+    <meta http-equiv="default-style" content="0; url=/Sparkle-Cleaning/index.html">
   </head>
   <body>
     <div id="root"></div>
